Update Wiki article

--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -2,7 +2,7 @@
 SETTINGS="Einstellungen"
 
 [ANY]
-USAGE_INFO="Informationen zur Verwendung findest du im <a href='http://www.loxwiki.eu:80/x/7wBmAQ'>Wiki-Artikel</a>"
+USAGE_INFO="Informationen zur Verwendung findest du im <a href='https://wiki.loxberry.de/plugins/any_plugin/'>Wiki-Artikel</a>"
 INSTANCES_RUNNING="Instanzen laufen derzeit (<i>mehr als eine wäre nicht gut</i>)"
 BUTTON_LOGFILE="Logfile"
 TCP_IN_HINT="Der IN-Port ist der TCP-Port, mit dem dein Miniserver mit dem Any-Plugin verbinden kann."
