--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -3,7 +3,7 @@
 SETTINGS="Settings"
 
 [ANY]
-USAGE_INFO="Information about the usage you can find in the <a href='http://www.loxwiki.eu:80/x/7wBmAQ'>Wiki article</a> (German)."
+USAGE_INFO="Information about the usage you can find in the <a href='https://wiki.loxberry.de/plugins/any_plugin/'>Wiki article</a> (German)."
 INSTANCES_RUNNING="instances currently running (<i>more than 1 is possibly bad</i>)"
 BUTTON_LOGFILE="Logfile"
 TCP_IN_HINT="TCP-IN is the TCP port to connect from the Miniserver to the Any-Plugin."
